# PyCertGen

./: README.md  __main__.py  generator.py  gui.py  main.py  ppt_to_pdf.py  pyproject.toml  requirements.txt  setup.cfg
input/: .~lock.data.xlsx#  data.xlsx  template.pptx
output/: .~lock.3.pdf#  .~lock.7.pdf#
pycertgen/: __main__.py  generator.py  gui.py  ppt_manager.py
