[tool.poetry]
name = "PyCertGen"
version = "23.12.0"
description = "Package for certificate generation"
authors = ["Ellian Abe <ellian_abe@outlook.com>"]
homepage = "https://github.com/EllianAbe/PyCertGen.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
openpyxl = ">=3.1.2"
pandas = ">=2.1.2"
python-pptx = ">=0.6.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
